--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="main.js" defer></script>
+    
     
 </head>
 <body>
+    <script src="main.js" defer></script>
     <div class="calculator-grid">
         <div class="output">
-            <div data-previous-operand class="previous-operand"></div>
+            <div data-previous-operand class="previous-operand">2</div>
             <div data-current-operand class="current-operand"></div>
         </div>
         <button data-all-clear class="span-two">AC</button>
-        <button data-operation>DEL</button>
-        <button data-number>/</button>
+        <button data-delete>DEL</button>
+        <button data-operation>/</button>
         <button data-number>1</button>
         <button data-number>2</button>
         <button data-number>3</button>
