--- a/index.html
+++ b/index.html
@@ -15,27 +15,48 @@
     <script src="main.js" defer></script>
     <div class="calculator-grid">
         <div class="output">
-            <div data-previous-operand class="previous-operand">2</div>
+            <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
         </div>
-        <button data-all-clear class="span-two">AC</button>
-        <button data-delete>DEL</button>
-        <button data-operation>/</button>
-        <button data-number>1</button>
-        <button data-number>2</button>
-        <button data-number>3</button>
-        <button data-operation>*</button>
-        <button data-number>4</button>
-        <button data-number>5</button>
-        <button data-number>6</button>
-        <button data-operation>+</button>
+        <!-- <button data-all-clear class="span-two">AC</button> -->
+        <button data-all-clear >RAD</button>
+        <button data-all-clear >Deg</button>
+        <button data-all-clear >X!</button>
+        <button data-all-clear >(</button>
+        <button data-all-clear >)</button>
+        <button data-all-clear >%</button>
+        <button data-all-clear >AC</button>
+        <button data-all-clear >inv</button>
+        <button data-all-clear >sin</button>
+        <button data-all-clear >ln</button>
         <button data-number>7</button>
         <button data-number>8</button>
         <button data-number>9</button>
+        <button data-operation>÷</button>
+
+        <button data-operation>π</button>
+        <button data-operation>cos</button>
+        <button data-operation>log</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation>*</button>
+        <button data-operation>e</button>
+        <button data-operation>tan</button>
+        <button data-operation>√</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
         <button data-operation>-</button>
-        <button data-number>.</button>
+        <button data-operation>Ans</button>
+        <button data-operation>EXP</button>
+        <button data-operation>x^y</button>
         <button data-number>0</button>
-        <button data-equals class="span-two" >=</button>
+        <button data-number>.</button>  
+        <button data-equals >=</button>
+        <button data-operation>+</button>
+ 
+
     </div>
     
 </body>
